@@ -89,9 +89,13 @@ class PropelObjectFormatter extends PropelFormatter
 		// related objects added using with()
 		foreach ($this->getWith() as $modelWith) {
 			list($endObject, $col) = call_user_func(array($modelWith->getModelPeerName(), 'populateObject'), $row, $col);
+			$startObject = $modelWith->isPrimary() ? $obj : $hydrationChain[$modelWith->getLeftPhpName()];
 			// as we may be in a left join, the endObject may be empty
 			// in which case it should not be related to the previous object
 			if (null === $endObject || $endObject->isPrimaryKeyNull()) {
+				if ($modelWith->isAdd()) {
+					call_user_func(array($startObject, $modelWith->getInitMethod()), false);
+				}
 				continue;
 			}
 			if (isset($hydrationChain)) {
@@ -100,7 +104,6 @@ class PropelObjectFormatter extends PropelFormatter
 				$hydrationChain = array($modelWith->getRightPhpName() => $endObject);
 			}
 			
-			$startObject = $modelWith->isPrimary() ? $obj : $hydrationChain[$modelWith->getLeftPhpName()];
 			call_user_func(array($startObject, $modelWith->getRelationMethod()), $endObject);
 		}
 		
